--- a/.github/workflows/cask-ci.yml
+++ b/.github/workflows/cask-ci.yml
@@ -7,36 +7,36 @@ on:
 
 jobs:
   ci:
-    runs-on: macOS-10.14
+    runs-on: macos-latest
     steps:
-      - name: brew pull
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+        with:
+          test-bot: false
+
+      - name: Cache Homebrew Gems
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.set-up-homebrew.outputs.gems-path }}
+          key: homebrew-gems-cache-${{ steps.set-up-homebrew.outputs.gems-path }}
+          restore-keys: homebrew-gems-cache-
+
+      - name: Check out Pull Request
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
+      - name: Install Homebrew Gems
+        run: brew install-bundler-gems
+
+      - name: brew audit
         run: |
-          brew update-reset "$(brew --repository)"
+          brew audit --tap "${GITHUB_REPOSITORY}"
+        if: always()
 
-          HOMEBREW_INSTALL_BUNDLER_GEMS_FIRST=1 brew config &
-          dependencies=$!
-
-          brew tap "${GITHUB_REPOSITORY}"
-
-          # Get latest version of `brew cask ci` command.
-          if [ "${GITHUB_REPOSITORY}" != Homebrew/homebrew-cask ]; then
-            brew update-reset "$(brew --repository homebrew/cask)"
-          fi
-
-          brew update-reset "$(brew --repository "${GITHUB_REPOSITORY}")"
-
-          brew pull --clean "${PR_URL}"
-
-          wait $dependencies
-        env:
-          PR_URL: ${{ github.event.pull_request._links.html.href }}
-          HOMEBREW_COLOR: 1
-          HOMEBREW_DEVELOPER: 1
-      - name: brew cask ci
+      - name: brew style
         run: |
-          cd "$(brew --repository "${GITHUB_REPOSITORY}")"
-          brew cask ci
-        env:
-          CI: true
-          HOMEBREW_COLOR: 1
-          HOMEBREW_DEVELOPER: 1
+          brew style "${GITHUB_REPOSITORY}"
+        if: always()
