--- a/.github/workflows/cask-ci.yml
+++ b/.github/workflows/cask-ci.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
-          key: homebrew-gems-cache-${{ steps.set-up-homebrew.outputs.gems-path }}
+          key: homebrew-gems-cache-${{  GITHUB_SHA }}
           restore-keys: homebrew-gems-cache-
 
       - name: Check out Pull Request
