--- a/.github/workflows/cask.yml
+++ b/.github/workflows/cask.yml
@@ -1,11 +1,18 @@
-name: CI
+name: Casks CI
 
-on: pull_request
+on:
+  pull_request:
+    paths:
+      - "Casks/**"
 
 env:
   HOMEBREW_DEVELOPER: 1
   HOMEBREW_NO_AUTO_UPDATE: 1
   HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+concurrency:
+  group: "${{ github.ref }}"
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   generate-matrix:
@@ -73,9 +80,6 @@ jobs:
           if ! rm /usr/local/bin/conda; then
             echo '::warning::Removing `conda` symlink is no longer necessary.'
           fi
-          if ! brew untap adoptopenjdk/openjdk; then
-            echo '::warning::Untapping adoptopenjdk/openjdk is no longer necessary.'
-          fi
           brew unlink python && brew link --overwrite python
         if: runner.os == 'macOS'
 
@@ -87,7 +91,7 @@ jobs:
           mkdir "${GITHUB_WORKSPACE}"
 
       - name: Cache Homebrew Gems
-        uses: actions/cache@v2.1.4
+        uses: actions/cache@v2.1.6
         with:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
           key: ${{ runner.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
@@ -119,11 +123,16 @@ jobs:
         id: audit
         run: |
           brew audit --cask ${{ join(matrix.audit_args, ' ') }}${{ (matrix.cask && ' ') || ' --tap ' }}'${{ matrix.cask.path || matrix.tap }}'
-        if: always() && steps.fetch.outcome == 'success' && !matrix.skip_audit
+        timeout-minutes: 30
+        if: >
+          always() && steps.gems.outcome == 'success' &&
+          (!matrix.cask || steps.fetch.outcome == 'success') &&
+          !matrix.skip_audit
 
       - name: Gather cask information
         id: info
         run: |
+          brew tap homebrew/cask-versions
           brew ruby <<'EOF'
             require 'cask/cask_loader'
             require 'cask/installer'
