--- a/.github/workflows/cask.yml
+++ b/.github/workflows/cask.yml
@@ -133,6 +133,7 @@ jobs:
         id: info
         run: |
           brew tap homebrew/cask-versions
+          brew tap homebrew/cask-fonts
           brew ruby <<'EOF'
             require 'cask/cask_loader'
             require 'cask/installer'
