--- a/.github/workflows/cask.yml
+++ b/.github/workflows/cask.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - "Casks/**"
+      - ".github/workflows/cask.yml"
 
 env:
   HOMEBREW_DEVELOPER: 1
@@ -31,7 +32,7 @@ jobs:
           test-bot: false
 
       - name: Check out Pull Request
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
@@ -64,7 +65,7 @@ jobs:
         if: runner.debug
 
       - name: Check out Pull Request
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
@@ -94,7 +95,7 @@ jobs:
 
       - name: Cache Homebrew Gems
         id: cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
           key: ${{ matrix.runner }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
@@ -144,7 +145,6 @@ jobs:
       - name: Gather cask information
         id: info
         run: |
-          brew tap homebrew/cask-fonts
           brew ruby <<'EOF'
             require 'cask/cask_loader'
             require 'cask/installer'
