--- a/.github/workflows/cask.yml
+++ b/.github/workflows/cask.yml
@@ -29,10 +29,12 @@ jobs:
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
         with:
+          core: false
+          cask: true
           test-bot: false
 
       - name: Check out Pull Request
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
           persist-credentials: false
@@ -40,8 +42,7 @@ jobs:
       - name: Generate CI matrix
         id: generate-matrix
         run: |
-          brew tap homebrew/cask
-          brew ruby -- "$(brew --repository homebrew/cask)/cmd/lib/generate-matrix.rb" "${{ github.event.pull_request.url }}"
+          brew generate-cask-ci-matrix --url "${{ github.event.pull_request.url }}"
 
   test:
     name: ${{ matrix.name }}
@@ -56,7 +57,9 @@ jobs:
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
         with:
-          test-bot: false
+          core: false
+          cask: true
+          test-bot: true
 
       - name: Enable debug mode
         run: |
@@ -65,61 +68,35 @@ jobs:
         if: runner.debug
 
       - name: Check out Pull Request
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
           persist-credentials: false
 
       - name: Clean up CI machine
-        run: |
-          if ! brew list --cask visual-studio &>/dev/null; then
-            if ! rm -r '/Applications/Visual Studio.app'; then
-              echo '::warning::Removing Visual Studio is no longer necessary.'
-            fi
-          fi
-
-          if ! brew uninstall --cask julia && ! rm -r /Applications/Julia-*.app; then
-            echo '::warning::Removing Julia is no longer necessary.'
-          fi
-
-          if ! rm /usr/local/bin/dotnet; then
-            echo '::warning::Removing `dotnet` symlink is no longer necessary.'
-          fi
-
-          if ! rm /usr/local/bin/pod; then
-            echo '::warning::Removing `cocoapods` symlink is no longer necessary.'
-          fi
-
-          brew unlink python && brew link --overwrite python
         if: runner.os == 'macOS'
+        run: brew test-bot --cleanup --only-cleanup-before
 
       - name: Cache Homebrew Gems
         id: cache
-        uses: actions/cache@v4
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
         with:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
           key: ${{ matrix.runner }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
           restore-keys: ${{ matrix.runner }}-rubygems-
 
-      - name: Install Homebrew Gems
-        id: gems
-        run: brew install-bundler-gems
-        if: steps.cache.outputs.cache-hit != 'true'
+      - name: Cache style cache
+        if: runner.os == 'macOS'
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
+        with:
+          path: ~/Library/Caches/Homebrew/style
+          key: macos-style-cache-${{ github.sha }}
+          restore-keys: macos-style-cache-
 
-      - name: Run brew readall ${{ matrix.tap }}
-        id: readall
-        run: brew readall '${{ matrix.tap }}'
-        if: >
-          always() &&
-          contains(fromJSON('["success", "skipped"]'), steps.gems.outcome) &&
-          !matrix.skip_readall
-
-      - name: Run brew style ${{ matrix.tap }}
-        run: brew style '${{ matrix.tap }}'
-        if: >
-          always() &&
-          contains(fromJSON('["success", "skipped"]'), steps.readall.outcome) &&
-          !matrix.cask
+      - name: Run brew test-bot --only-tap-syntax
+        id: tap-syntax
+        run: brew test-bot --tap '${{ matrix.tap }}' --only-tap-syntax
+        if: always() && !matrix.cask
 
       - name: Run brew fetch --cask ${{ matrix.cask.token }}
         id: fetch
@@ -128,7 +105,7 @@ jobs:
         timeout-minutes: 30
         if: >
           always() &&
-          contains(fromJSON('["success", "skipped"]'), steps.readall.outcome) &&
+          contains(fromJSON('["success", "skipped"]'), steps.tap-syntax.outcome) &&
           matrix.cask
 
       - name: Run brew audit --cask${{ (matrix.cask && ' ') || ' --tap ' }}${{ matrix.cask.token || matrix.tap }}
@@ -138,7 +115,7 @@ jobs:
         timeout-minutes: 30
         if: >
           always() &&
-          contains(fromJSON('["success", "skipped"]'), steps.readall.outcome) &&
+          contains(fromJSON('["success", "skipped"]'), steps.tap-syntax.outcome) &&
           (!matrix.cask || steps.fetch.outcome == 'success') &&
           !matrix.skip_audit
 
@@ -151,10 +128,11 @@ jobs:
 
             cask = Cask::CaskLoader.load('${{ matrix.cask.path }}')
 
-            was_installed = cask.installed?
-            manual_installer = cask.artifacts.any? { |artifact|
-              artifact.is_a?(Cask::Artifact::Installer::ManualInstaller)
-            }
+            manual_installer = cask.artifacts.any? do |artifact|
+              if defined?(artifact.manual_install)
+                artifact.manual_install
+              end
+            end
 
             macos_requirement_satisfied = if macos_requirement = cask.depends_on.macos
               macos_requirement.satisfied?
@@ -172,7 +150,6 @@ jobs:
             formula_dependencies = cask_and_formula_dependencies.select { |d| d.is_a?(Formula) }.map(&:full_name)
 
             File.open(ENV.fetch("GITHUB_OUTPUT"), "a") do |f|
-              f.puts "was_installed=#{JSON.generate(was_installed)}"
               f.puts "manual_installer=#{JSON.generate(manual_installer)}"
               f.puts "macos_requirement_satisfied=#{JSON.generate(macos_requirement_satisfied)}"
               f.puts "cask_conflicts=#{JSON.generate(cask_conflicts)}"
@@ -195,10 +172,10 @@ jobs:
         if: always() && steps.info.outcome == 'success' && join(fromJSON(steps.info.outputs.cask_conflicts)) != ''
         timeout-minutes: 30
 
-      - name: Run brew uninstall --cask --zap ${{ matrix.cask.token }}
+      - name: Run brew uninstall --cask --force --zap ${{ matrix.cask.token }}
         run: |
-          brew uninstall --cask --zap '${{ matrix.cask.path }}'
-        if: always() && steps.info.outcome == 'success' && fromJSON(steps.info.outputs.was_installed)
+          brew uninstall --cask --force --zap '${{ matrix.cask.path }}'
+        if: always() && steps.info.outcome == 'success'
         timeout-minutes: 30
 
       - name: Take snapshot of installed and running apps and services
@@ -223,12 +200,6 @@ jobs:
       - name: Run brew uninstall --cask ${{ matrix.cask.token }}
         run: brew uninstall --cask '${{ matrix.cask.path }}'
         if: always() && steps.install.outcome == 'success' && !fromJSON(steps.info.outputs.manual_installer)
-        timeout-minutes: 30
-
-      - name: Uninstall formula dependencies
-        run: |
-          brew uninstall --formula ${{ join(fromJSON(steps.info.outputs.formula_dependencies), ' ') }}
-        if: always() && steps.install.outcome == 'success' && join(fromJSON(steps.info.outputs.formula_dependencies)) != ''
         timeout-minutes: 30
 
       - name: Uninstall cask dependencies
@@ -268,4 +239,3 @@ jobs:
     steps:
       - name: Result
         run: ${{ needs.test.result == 'success' }}
-        
