--- a/.github/workflows/cask.yml
+++ b/.github/workflows/cask.yml
@@ -1,10 +1,16 @@
 name: Casks CI
 
 on:
+  push:
+    branches:
+      - main
+      - master
   pull_request:
-    paths:
-      - "Casks/**"
-      - ".github/workflows/cask.yml"
+    paths-ignore:
+      - "README.md"
+      - "Formula/**"
+      - ".github/workflows/formula.yml"
+  merge_group:
   workflow_dispatch:
     inputs:
       casks:
@@ -63,6 +69,9 @@ jobs:
           then
             # shellcheck disable=SC2086 # $INPUT_CASKS is a space-separated list of cask tokens
             brew generate-cask-ci-matrix ${{ github.event.inputs.skip_install && '--skip-install' }} ${{ github.event.inputs.new_cask && '--new' }} --casks $INPUT_CASKS
+          elif [[ "${GITHUB_EVENT_NAME}" == "push" || "${GITHUB_EVENT_NAME}" == "merge_group" ]]
+          then
+            brew generate-cask-ci-matrix --syntax-only
           else
             brew generate-cask-ci-matrix --url "$PULL_REQUEST_URL"
           fi
